--- a/index.html
+++ b/index.html
@@ -4,63 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/header-lib.min.css">
-    <title>Document</title>
+    <title>ヘッダーライブラリのテスト</title>
 </head>
-<body id="body" class="index">
-    <div id="header-lib"></div>
-    <script>
-        //サンプル
-    const headerOptions = {
-      menus: [ // メニューの設定
-                {
-                    name: 'ホーム',
-                    class: 'index',
-                    link: '#',
-                },
-                {
-                    name: 'お知らせ',
-                    class: 'news',
-                    link: '#',
-                },
-                {
-                    name: 'サービス',
-                    class: 'service',
-                    link: '#',
-                },
-                {
-                    name: '会社概要',
-                    class: 'company',
-                    link: '#',
-                },
-                {
-                    name: 'お問い合わせ',
-                    class: 'contact',
-                    link: '#',
-                },
-                // {
-                //     name: 'Google',
-                //     link: 'https://google.com',
-                //     isAnother: true,
-                // },
-            ],
-            active: {
-                // humberger: true, // ハンバーガーメニュー 表示設定
-                // menuStyle: 'vertical', /// メニューのスタイル
-                logo: 'https://jp.vuejs.org/images/logo.svg', // ロゴのURL 無ければエレメント自体非表示
-                // verticalLine: true, // メニュー間の縦線 縦のときは無し
-                menuHover: true, // ホバーエフェクト
-            },
-            mq:[
-                'max', 767,
-                // 'min', 767,
-                {
-                    humberger: true, // ハンバーガーメニュー 表示設定
-                    menuStyle: 'vertical',/// メニューのスタイル
-                }, 
-            ],
-    }
-    </script>
-    <script src="js/header-lib.min.js"></script>
+<body>
+    <ul style="margin: 15px;">
+        <li style="margin-bottom: 10px;"><a href="./lib-used/">ライブラリ使用</a></li>
+        <li style="margin-bottom: 10px;"><a href="./non-lib-used/">ライブラリ未使用</a></li>
+    </ul>
 </body>
 </html>
