--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
+<html lang="">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/header-lib.min.css">
-    <title>ライブラリ使用 - ヘッダーライブラリのテスト</title>
-</head>
-<body id="body" class="index">
-    <div id="header-lib"></div>
-    <script>
-        //サンプル
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
+  <script>
     const headerOptions = {
       menus: [ // メニューの設定
                 {
@@ -61,6 +58,11 @@
             ],
     }
     </script>
-    <script src="../js/header-lib.min.js"></script>
-</body>
+  <body id="body" class="index">
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
